# python-project-lvl4

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
task_manager/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  (+1 more)
task_manager/statuses/: forms.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_assignee_alter_task_author_and_more.py  0003_tasktolabel_task_labels_tasktolabel_task.py  0004_rename_assignee_task_executor.py
task_manager/templates/: base.html  delete_form.html  form.html  index.html  login.html  user_delete.html  user_update.html  users_list.html
task_manager/templates/basic/: delete_form.html  form.html  items_list.html  page.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  details.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
tests/: assert_.py  conftest.py  constants.py  labels_tests.py  statuses_tests.py  tasks_tests.py  users_tests.py
